gallery-image class added in .scss file

--- a/gnowsys-ndf/gnowsys_ndf/ndf/static/ndf/scss/_app_styles.scss
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/static/ndf/scss/_app_styles.scss
@@ -4481,3 +4481,9 @@ course-title{
 .audio-caption{
   cursor:pointer;
 }
+
+.gallery-image{
+  cursor:pointer;
+  max-height:100px;
+  border: 1px solid !important;
+}
