--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/ImageDashboard.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/ImageDashboard.html
@@ -189,7 +189,7 @@ $("#btnUploadCancel").click(function() {
     {% for each in imageCollection %}
     
     <li class="card-image-wrapper">
-            <img  style="cursor:pointer;max-height:100px;border: 1px solid !important;" data-image-id="{{each.pk}}" 
+            <img  class="gallery-image" style="" data-image-id="{{each.pk}}" 
               "{% if 'svg' in each.if_file.mime_type   %}"
               src="{{MEDIA_URL}}{{each.if_file.original.relurl}}"
               "{% else %}"
