--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/course_about.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/course_about.html
@@ -194,7 +194,7 @@
 
             type: "GET",
 
-            dataType: "html",
+            dataType: "json",
             global: false,
             success: function(data){
               $(".admin_analytics_fetched").attr('value', "True");
