--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/users_mgmt.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/users_mgmt.html
@@ -90,38 +90,43 @@
           success: function(data) {
             $("#student_data_set_div").html("")
             data = JSON.parse(data)
-            $("#student_count_div").html("Total "+ data.length+" student found.")
-            var stud_table = document.createElement('table');
-            outer_div = document.getElementById("student_data_set_div");
-            stud_table.style.width = "100%"
-            outer_div.style.height = "450px"
-            outer_div.style.overflowX = "hidden"
-            outer_div.style.overflowY = "auto"
-            var table_header = stud_table.createTHead();
-            var header_row = table_header.insertRow(0)     
-            var cell1 = header_row.insertCell(0)
-            var cell2 = header_row.insertCell(1)
-            var cell3 = header_row.insertCell(2)
-            cell1.innerHTML = "<b>No.</b>"
-            cell2.innerHTML = "<b>Name</b>"
-            cell3.innerHTML = "<b>Action</b>"
-            var table_body = stud_table.createTBody();
-  
-            $.each(data, function(index_val,tuple_obj){
-              var data_row = table_body.insertRow(-1); 
-              data_row.id =  tuple_obj[0]
-              var serial_no_cell = data_row.insertCell(0);
-              var data_cell = data_row.insertCell(1);
-              var change_pass = data_row.insertCell(2);
+            if(data.length > 0){
+              $("#student_count_div").html("Total "+ data.length+" student found.")
+              var stud_table = document.createElement('table');
+              outer_div = document.getElementById("student_data_set_div");
+              stud_table.style.width = "100%"
+              outer_div.style.height = "450px"
+              outer_div.style.overflowX = "hidden"
+              outer_div.style.overflowY = "auto"
+              var table_header = stud_table.createTHead();
+              var header_row = table_header.insertRow(0)     
+              var cell1 = header_row.insertCell(0)
+              var cell2 = header_row.insertCell(1)
+              var cell3 = header_row.insertCell(2)
+              cell1.innerHTML = "<b>No.</b>"
+              cell2.innerHTML = "<b>Name</b>"
+              cell3.innerHTML = "<b>Action</b>"
+              var table_body = stud_table.createTBody();
+    
+              $.each(data, function(index_val,tuple_obj){
+                var data_row = table_body.insertRow(-1); 
+                data_row.id =  tuple_obj[0]
+                var serial_no_cell = data_row.insertCell(0);
+                var data_cell = data_row.insertCell(1);
+                var change_pass = data_row.insertCell(2);
 
-              serial_no_cell.innerHTML = index_val + 1
-              data_cell.innerHTML = tuple_obj[1]
-              data_cell.className = "username"
-              change_pass.innerHTML = "<a>Change Password</a>"
-              change_pass.className = "change_pass"
-            })
+                serial_no_cell.innerHTML = index_val + 1
+                data_cell.innerHTML = tuple_obj[1]
+                data_cell.className = "username"
+                change_pass.innerHTML = "<a>Change Password</a>"
+                change_pass.className = "change_pass"
+              })
 
-            $("#student_data_set_div").append(stud_table);
+              $("#student_data_set_div").append(stud_table);
+            }
+            else{
+              $("#student_data_set_div").html("No results found")      
+            }
           },
         });
         }
